commit tree 4124b0487cb453b368c7bcd0f76da60ab09722c5

--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -16,7 +16,7 @@ parent-element{
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 article p {
-  position: absolute;
+  position: relative;
   z-index: 5;
   top: 291px;
   left: 319px;
